cabal-version: 2.2
name:
  pairing-heaps
version:
  0.1
author:
  aljce, chessai
maintainer:
  aljce <mckean.kylej@gmail.com>
  chessai <chessai1996@gmail.com>
build-type:
  Simple

common shared-properties
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    PackageImports
    TypeApplications

library
  import:
    shared-properties
  hs-source-dirs:
    src
  exposed-modules:
    PairingHeaps.Min
    PairingHeaps.Internal.Min
    PairingHeaps.Internal.NonEmptyHeap
  build-depends:
    , base >= 4.14 && < 4.17

test-suite test
  import:
    shared-properties
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Gen
    Property
    Unit
  build-depends:
    , base
    , hedgehog
    , hedgehog-classes
    , pairing-heaps
    , tasty
    , tasty-hedgehog
    , tasty-hunit
